--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-pdfjs",
-  "version": "0.0.1",
+  "name": "@xst/node-red-contrib-pdfjs",
+  "version": "0.0.2",
   "description": "Node-RED node to extract pdf data using pdfjs",
   "dependencies": {
     "pdfjs-dist": "2.9.359"
